@@ -5,7 +5,9 @@ import hudson.model.BuildListener;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -24,6 +26,7 @@ import javax.enterprise.deploy.spi.Target;
 import javax.management.MalformedObjectNameException;
 import javax.management.NotificationFilterSupport;
 import javax.management.ObjectName;
+import javax.net.ssl.SSLSocketFactory;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 
@@ -42,6 +45,9 @@ import com.ibm.websphere.management.application.client.AppDeploymentController;
 import com.ibm.websphere.management.application.client.AppDeploymentTask;
 import com.ibm.websphere.management.exception.AdminException;
 import com.ibm.websphere.management.exception.ConnectorException;
+import com.ibm.ws.management.application.AppUtils;
+import com.ibm.ws.management.application.task.ConfigRepoHelper;
+import com.ibm.ws.sm.workspace.RepositoryContext;
 
 /**
  * @author Greg Peters
@@ -55,6 +61,7 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     private AdminClient client;
     private String connectorType;
     private boolean verbose;
+    private boolean trustAll;
     private BuildListener buildListener;
     /**
      * This is used to prevent weird behaviors caused by IBM wsadmin that overrides
@@ -64,6 +71,10 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
      *   GitHub discussion</a> for a reference.
      */
     private Properties storedProperties;
+    
+    public WebSphereDeploymentService() {
+    	System.setProperty("com.ibm.websphere.thinclient", "true");
+    }
 
     public List<Server> listServers() {
         try {
@@ -105,24 +116,40 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
 
     public void generateEAR(Artifact artifact, File destination,String earLevel) {
         byte[] buf = new byte[1024];
+        ZipOutputStream out = null;
+        FileInputStream in = null;
         try {
-            ZipOutputStream out = new ZipOutputStream(new FileOutputStream(destination));
-            FileInputStream in = new FileInputStream(artifact.getSourcePath());
+            out = new ZipOutputStream(new FileOutputStream(destination));
+            in = new FileInputStream(artifact.getSourcePath());
             out.putNextEntry(new ZipEntry(artifact.getSourcePath().getName()));
             int len;
             while ((len = in.read(buf)) > 0) {
                 out.write(buf, 0, len);
             }
             out.closeEntry();
-            in.close();
             out.putNextEntry(new ZipEntry("META-INF/"));
             out.closeEntry();
             out.putNextEntry(new ZipEntry("META-INF/application.xml"));
-            out.write(getApplicationXML(artifact,earLevel).getBytes());
+            out.write(getApplicationXML(artifact,earLevel).getBytes(Charset.forName("UTF-8")));
             out.closeEntry();
             out.close();
         } catch (Exception e) {
             e.printStackTrace();
+        } finally {
+        	if(out != null) {
+        		try {
+					out.close();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+        	}
+        	if(in != null) {
+        		try {
+					in.close();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+        	}
         }
     }
 
@@ -131,12 +158,13 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     If any exception is thrown, it will fall back to the WAR name.
      */
     private String getContextRoot(Artifact artifact) {
+    	ZipFile zipFile = null;
         try {
         	if(artifact.getContext() != null) {
         		return artifact.getContext();
         	}
             // open WAR and find ibm-web-ext.xml
-            ZipFile zipFile = new ZipFile(artifact.getSourcePath());
+            zipFile = new ZipFile(artifact.getSourcePath());
             ZipEntry webExt = zipFile.getEntry("WEB-INF/ibm-web-ext.xml");
             if(webExt != null) { //not an IBM based WAR
 	            InputStream webExtContent = zipFile.getInputStream(webExt);
@@ -156,6 +184,14 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
         } catch (Exception e) {            
         	e.printStackTrace();
             return getContextRootFromWarName(artifact);
+        } finally {
+        	if(zipFile != null) {
+        		try {
+					zipFile.close();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+        	}
         }
     }
     
@@ -165,7 +201,7 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     }
 
     private String getApplicationXML(Artifact artifact,String earLevel) {
-        String contextRoot = getContextRoot(artifact);
+        String contextRoot = getContextRoot(artifact).trim();
         String warName = artifact.getSourcePath().getName();
         String displayName = StringUtils.trimToNull(artifact.getAppName());
         if(displayName == null) {
@@ -185,7 +221,7 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     }
     
     private String getSchemaVersion(String earLevel) {
-    	if(earLevel == "7") {
+    	if(earLevel.equals("7") || earLevel.equals("8")) {
     		return "xsi:schemaLocation=\"http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/application_"+earLevel+".xsd\" version=\""+earLevel+"\"";
     	} else { //EAR is EE5 or EE6
     		return "xsi:schemaLocation=\"http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/application_"+earLevel+".xsd\" version=\""+earLevel+"\"";
@@ -222,67 +258,75 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     }
     
     private Hashtable<String,Object> buildDeploymentPreferences(Artifact artifact) throws Exception {
-        Hashtable<String,Object> preferences = new Hashtable<String,Object>();
+    	if(artifact.getPreferences().size() > 0) {
+    		return artifact.getPreferences();
+    	}
+        Hashtable<String,Object> defaultBindingPreferences = new Hashtable<String,Object>();
         Properties defaultBinding = new Properties();
-        preferences.put(AppConstants.APPDEPL_LOCALE, Locale.getDefault());
-                
-        AppDeploymentController controller = AppDeploymentController.readArchive(artifact.getSourcePath().getAbsolutePath(), preferences);
+        defaultBindingPreferences.put(AppConstants.APPDEPL_LOCALE, Locale.getDefault());
+        /** handle default binding **/
+        if(StringUtils.trimToNull(artifact.getVirtualHost()) != null) { 
+        	defaultBinding.put(AppConstants.APPDEPL_DFLTBNDG_VHOST, artifact.getVirtualHost());	
+        }        
+        /** end handle default binding **/
+        defaultBindingPreferences.put(AppConstants.APPDEPL_DFLTBNDG, defaultBinding);                
+        AppDeploymentController controller = AppDeploymentController.readArchive(artifact.getSourcePath().getAbsolutePath(), defaultBindingPreferences);
         
         String[] validationResult = controller.validate();
         if (validationResult != null && validationResult.length > 0) {
            throw new DeploymentServiceException("Unable to complete all task data for deployment preparation. Reason: " + Arrays.toString(validationResult));
         }
 
-        //controller.saveAndClose(); //block editing of EAR upon validation
-
-        preferences.put(AppConstants.APPDEPL_LOCALE, Locale.getDefault());
-        preferences.put(AppConstants.APPDEPL_ARCHIVE_UPLOAD, Boolean.TRUE);
-        preferences.put(AppConstants.APPDEPL_PRECOMPILE_JSP, artifact.isPrecompile());
-        preferences.put(AppConstants.APPDEPL_DISTRIBUTE_APP, artifact.isDistribute());
-        preferences.put(AppConstants.APPDEPL_JSP_RELOADENABLED, artifact.isJspReloading());
-        preferences.put(AppConstants.APPDEPL_RELOADENABLED, artifact.isReloading());
-        /** handle default binding **/
-        if(artifact.getVirtualHost() != null && !artifact.getVirtualHost().trim().equals("")) {
-        	defaultBinding.put(AppConstants.APPDEPL_DFLTBNDG_VHOST, artifact.getVirtualHost());	
-        }        
-        /** end handle default binding **/
-        if(artifact.getSharedLibName() != null && !artifact.getSharedLibName().trim().equals("")) {
-        	preferences.put(AppConstants.APPDEPL_SHAREDLIB_NAME, artifact.getSharedLibName());	
+        controller.saveAndClose(); //block editing of EAR upon validation
+        
+		Hashtable<String, Object> options = controller.getAppOptions();
+        options.put(AppConstants.APPDEPL_LOCALE, Locale.getDefault());
+        options.put(AppConstants.APPDEPL_ARCHIVE_UPLOAD, Boolean.TRUE);
+        options.put(AppConstants.APPDEPL_PRECOMPILE_JSP, artifact.isPrecompile());
+        options.put(AppConstants.APPDEPL_DISTRIBUTE_APP, artifact.isDistribute());
+        options.put(AppConstants.APPDEPL_JSP_RELOADENABLED, artifact.isJspReloading());
+        options.put(AppConstants.APPDEPL_RELOADENABLED, artifact.isReloading());
+        if(StringUtils.trimToNull(artifact.getEdition()) != null) {
+        	options.put(AppConstants.APPDEPL_EDITION, artifact.getEdition());
+        	options.put(AppConstants.APPDEPL_EDITION_DESC, String.valueOf("Edition Timestamp: "+System.currentTimeMillis()));
+        	
+        }
+        if(StringUtils.trimToNull(artifact.getSharedLibName()) != null) {
+        	options.put(AppConstants.APPDEPL_SHAREDLIB_NAME, artifact.getSharedLibName());
+        	options.put(AppConstants.APPDEPL_MAP_SHAREDLIB, artifact.getSharedLibName());
         }        
         if(!artifact.isJspReloading()) {        	
-        	preferences.put(AppConstants.APPDEPL_JSP_RELOADINTERVAL, new Integer(0));
+        	options.put(AppConstants.APPDEPL_JSP_RELOADINTERVAL, Integer.valueOf(0));
         } else {
-        	preferences.put(AppConstants.APPDEPL_JSP_RELOADINTERVAL, new Integer(15));
+        	options.put(AppConstants.APPDEPL_JSP_RELOADINTERVAL, Integer.valueOf(15));
         }
         if(!artifact.isReloading()) {
-        	preferences.put(AppConstants.APPDEPL_RELOADINTERVAL, new Integer(0));
+        	options.put(AppConstants.APPDEPL_RELOADINTERVAL, Integer.valueOf(0));
         } else {        	
-        	preferences.put(AppConstants.APPDEPL_RELOADINTERVAL, new Integer(15));
+        	options.put(AppConstants.APPDEPL_RELOADINTERVAL, Integer.valueOf(15));
         }
         if(StringUtils.trimToNull(artifact.getAppName()) != null) {
-        	preferences.put(AppConstants.APPDEPL_APPNAME, artifact.getAppName());
+        	options.put(AppConstants.APPDEPL_APPNAME, artifact.getAppName());
         }
         if(StringUtils.trimToNull(artifact.getInstallPath()) != null) {
-        	preferences.put(AppConstants.APPDEPL_INSTALL_DIR, artifact.getInstallPath());	
+        	options.put(AppConstants.APPDEPL_INSTALL_DIR, artifact.getInstallPath());	
         }        
         if(StringUtils.trimToNull(artifact.getClassLoaderOrder()) != null) {
-        	preferences.put(AppConstants.APPDEPL_CLASSLOADINGMODE,artifact.getClassLoaderOrder());
+        	options.put(AppConstants.APPDEPL_CLASSLOADINGMODE,artifact.getClassLoaderOrder());
         }          
         if(StringUtils.trimToNull(artifact.getClassLoaderPolicy()) != null) {
-        	preferences.put(AppConstants.APPDEPL_CLASSLOADERPOLICY,artifact.getClassLoaderPolicy());
+        	options.put(AppConstants.APPDEPL_CLASSLOADERPOLICY,artifact.getClassLoaderPolicy());
         }
-        if(artifact.getContext() != null) {
-        	buildListener.getLogger().println("Setting context root to: "+artifact.getContext());
-        	preferences.put(AppConstants.APPDEPL_WEBMODULE_CONTEXTROOT, artifact.getContext());
-        	preferences.put(AppConstants.APPDEPL_WEB_CONTEXTROOT, artifact.getContext());
+        if(StringUtils.trimToNull(artifact.getContext()) != null) {
+        	options.put(AppConstants.APPDEPL_WEBMODULE_CONTEXTROOT, artifact.getContext());
+        	options.put(AppConstants.APPDEPL_WEB_CONTEXTROOT, artifact.getContext());
         }  
 
         Hashtable<String,Object> module2server = new Hashtable<String,Object>();
-        buildListener.getLogger().println("Deploying to targets: "+getFormattedTargets(artifact.getTargets()));
         module2server.put("*", getFormattedTargets(artifact.getTargets()));
-        preferences.put(AppConstants.APPDEPL_MODULE_TO_SERVER, module2server);  
-        preferences.put(AppConstants.APPDEPL_DFLTBNDG, defaultBinding);
-        return preferences;
+        options.put(AppConstants.APPDEPL_MODULE_TO_SERVER, module2server); 
+        artifact.setPreferences(options);
+        return options;
     }
 
     public void installArtifact(Artifact artifact) {
@@ -290,20 +334,23 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
             throw new DeploymentServiceException("Cannot install artifact, no connection to IBM WebSphere Application Server exists");
         }
         try {        	
-        	Hashtable<String,Object> preferences = buildDeploymentPreferences(artifact);            
-            AppManagement appManagementProxy = AppManagementProxy.getJMXProxyForClient(getAdminClient());
-            appManagementProxy.installApplication(artifact.getSourcePath().getAbsolutePath(),artifact.getAppName(),preferences, null);
-            
             NotificationFilterSupport filterSupport = createFilterSupport();
             DeploymentNotificationListener notifyListener = new DeploymentNotificationListener(getAdminClient(), filterSupport, "Install " + artifact.getAppName(),AppNotification.INSTALL,buildListener,verbose);            
             
-            synchronized(notifyListener) {
-            	notifyListener.wait();
-            }
-
-            if(!notifyListener.isSuccessful())
-               throw new DeploymentServiceException("Application not successfully deployed: " + notifyListener.getMessage());            
+            AppManagement appManagementProxy = AppManagementProxy.getJMXProxyForClient(getAdminClient());
+            appManagementProxy.installApplication(artifact.getSourcePath().getAbsolutePath(),artifact.getAppName(),buildDeploymentPreferences(artifact), null);
             
+			while(!notifyListener.hasEventTriggered()) {
+				synchronized (notifyListener) {
+					if(!notifyListener.hasEventTriggered()) {
+						notifyListener.wait();	
+					}
+				}	
+			}
+
+            if(!notifyListener.isSuccessful()) {
+               throw new DeploymentServiceException("Application not successfully deployed: " + notifyListener.getMessage());
+            }
         } catch (Exception e) {
             e.printStackTrace();
             throw new DeploymentServiceException("Failed to install artifact: "+e.getMessage());
@@ -315,21 +362,23 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
             throw new DeploymentServiceException("Cannot update artifact, no connection to IBM WebSphere Application Server exists");
         }		
         try {
-        	Hashtable<String,Object> preferences = buildDeploymentPreferences(artifact);
+            NotificationFilterSupport filterSupport = createFilterSupport();
+            DeploymentNotificationListener notifyListener = new DeploymentNotificationListener(getAdminClient(), filterSupport, "Update " + artifact.getAppName(),AppNotification.INSTALL,buildListener,verbose);
             
             AppManagement appManagementProxy = AppManagementProxy.getJMXProxyForClient(getAdminClient());
+            appManagementProxy.redeployApplication(artifact.getSourcePath().getAbsolutePath(),artifact.getAppName(),buildDeploymentPreferences(artifact), null);
             
-            appManagementProxy.redeployApplication(artifact.getSourcePath().getAbsolutePath(),artifact.getAppName(),preferences, null);
-            
-            NotificationFilterSupport filterSupport = createFilterSupport();
-            DeploymentNotificationListener notifyListener = new DeploymentNotificationListener(getAdminClient(), filterSupport, "Update " + artifact.getAppName(),AppNotification.INSTALL,buildListener,verbose);            
-            
-            synchronized(notifyListener) {
-            	notifyListener.wait();
-            }
+			while(!notifyListener.hasEventTriggered()) {
+				synchronized (notifyListener) {
+					if(!notifyListener.hasEventTriggered()) {
+						notifyListener.wait();	
+					}
+				}	
+			}
 
-            if(!notifyListener.isSuccessful())
-               throw new DeploymentServiceException("Application not successfully updated: " + notifyListener.getMessage());            
+            if(!notifyListener.isSuccessful()) {
+               throw new DeploymentServiceException("Application not successfully updated: " + notifyListener.getMessage());
+            }
             
         } catch (Exception e) {
             e.printStackTrace();
@@ -337,20 +386,22 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
         }        
 	}    
 
-    public void uninstallArtifact(String appName) throws Exception {
+    public void uninstallArtifact(Artifact artifact) throws Exception {
     	try {
-			Hashtable<Object, Object> prefs = new Hashtable<Object, Object>();
 			NotificationFilterSupport filterSupport = createFilterSupport();
-			
-			DeploymentNotificationListener notifyListener = new DeploymentNotificationListener(getAdminClient(),filterSupport,"Uninstall " + appName, AppNotification.UNINSTALL,buildListener,verbose);        
+			DeploymentNotificationListener notifyListener = new DeploymentNotificationListener(getAdminClient(),filterSupport,"Uninstall " + artifact.getAppName(), AppNotification.UNINSTALL,buildListener,verbose);        
 
 			AppManagement appManagementProxy = AppManagementProxy.getJMXProxyForClient(getAdminClient());
+			appManagementProxy.uninstallApplication(artifact.getAppName(),buildDeploymentPreferences(artifact), null);
 			
-			appManagementProxy.uninstallApplication(appName,prefs,null);
-			
-			synchronized (notifyListener) {
-				notifyListener.wait();
+			while(!notifyListener.hasEventTriggered()) {
+				synchronized (notifyListener) {
+					if(!notifyListener.hasEventTriggered()) {
+						notifyListener.wait();	
+					}
+				}	
 			}
+
 			if (!notifyListener.isSuccessful()) {
 				throw new DeploymentServiceException("Application not successfully undeployed: "+ notifyListener.getMessage());
 			}
@@ -359,15 +410,15 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
 		}
     }
 
-    public void startArtifact(String appName) throws Exception {
-    	startArtifact(appName, 5);
+    public void startArtifact(Artifact artifact) throws Exception {
+    	startArtifact(artifact, 5);
     }
     
-    public void startArtifact(String appName, int deploymentTimeout) throws Exception {
+    public void startArtifact(Artifact artifact, int deploymentTimeout) throws Exception {
 		try {			
 			AppManagement appManagementProxy = AppManagementProxy.getJMXProxyForClient(getAdminClient());	
-			if(waitForApplicationDistribution(appManagementProxy, appName, deploymentTimeout * 60)) {
-				String targetsStarted = appManagementProxy.startApplication(appName, null, null);
+			if(waitForApplicationDistribution(appManagementProxy, artifact, deploymentTimeout * 60)) {
+				String targetsStarted = appManagementProxy.startApplication(artifact.getAppName(), buildDeploymentPreferences(artifact), null);
 				log.info("Application was started on the following targets: "+ targetsStarted);
 				if (targetsStarted == null) {
 					//wait X seconds to let deployment settle
@@ -379,11 +430,11 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
-			throw new DeploymentServiceException("Could not start artifact '"+ appName + "': " + e.toString());
+			throw new DeploymentServiceException("Could not start artifact '"+ artifact.getAppName() + "': " + e.toString());
 		}
     }
     
-    private boolean waitForApplicationDistribution(AppManagement appManagementProxy,String appName,int secondsToWait) throws Exception {
+    private boolean waitForApplicationDistribution(AppManagement appManagementProxy,Artifact artifact,int secondsToWait) throws Exception {
     	int totalSeconds = 0;
     	NotificationFilterSupport filterSupport = createFilterSupport();
     	DeploymentNotificationListener distributionListener = null;
@@ -391,41 +442,39 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
 			Thread.sleep(1000);			
 			totalSeconds++;
 			distributionListener = new DeploymentNotificationListener(getAdminClient(), filterSupport, null,AppNotification.DISTRIBUTION_STATUS_NODE,buildListener,verbose);
+			
 			synchronized (distributionListener) {
-				appManagementProxy.getDistributionStatus(appName,new Hashtable<Object, Object>(), null);
-				distributionListener.wait();
-			}
+				if(!distributionListener.hasEventTriggered()) {
+					appManagementProxy.getDistributionStatus(artifact.getAppName(),buildDeploymentPreferences(artifact), null);
+					distributionListener.wait();
+				}
+			}	
 		}    	
 		return totalSeconds <= secondsToWait;
     }
 
-    public void stopArtifact(String appName) throws Exception {
+    public void stopArtifact(Artifact artifact) throws Exception {
         try {
-            AppManagementProxy.getJMXProxyForClient(getAdminClient()).stopApplication(appName, new Hashtable<Object,Object>(), null);
+            AppManagementProxy.getJMXProxyForClient(getAdminClient()).stopApplication(artifact.getAppName(), buildDeploymentPreferences(artifact), null);
         } catch(Exception e) {
             e.printStackTrace();
-            throw new DeploymentServiceException("Could not stop artifact '"+appName+"': "+e.getMessage());
+            throw new DeploymentServiceException("Could not stop artifact '"+artifact.getAppName()+"': "+e.getMessage());
         }
     }
 
-    public boolean isArtifactInstalled(String name) {
+    public boolean isArtifactInstalled(Artifact artifact) {
         try {
-        	System.out.println("Checking if app, looking up JMX interface...");
         	AppManagement appManagement = AppManagementProxy.getJMXProxyForClient(getAdminClient());
-        	System.out.println("Getting JMX proxy client... AppManagementProxy Found: "+appManagement);
-        	System.out.println("Checking if app exists via AppMangementProxy...");
-            boolean result = appManagement.checkIfAppExists(name, new Hashtable(), null);
-            System.out.println(name+" is installed on WebSphere: "+result);
-            return result;
+            return appManagement.checkIfAppExists(artifact.getAppName(), buildDeploymentPreferences(artifact), null);
         } catch(AdminException e) {
             e.printStackTrace();
-            throw new DeploymentServiceException("Could not determine if artifact '"+name+"' is installed: AdminException: "+e.getMessage());
+            throw new DeploymentServiceException("Could not determine if artifact '"+artifact.getAppName()+"' is installed: AdminException: "+e.getMessage());
         } catch (ConnectorException e) {
 			e.printStackTrace();
-			throw new DeploymentServiceException("Could not determine if artifact '"+name+"' is installed: ConnectorException: "+e.getMessage());
+			throw new DeploymentServiceException("Could not determine if artifact '"+artifact.getAppName()+"' is installed: ConnectorException: "+e.getMessage());
 		} catch (Exception e) {
 			e.printStackTrace();
-			throw new DeploymentServiceException("Could not determine if artifact '"+name+"' is installed: General Exception: "+e.getMessage());
+			throw new DeploymentServiceException("Could not determine if artifact '"+artifact.getAppName()+"' is installed: General Exception: "+e.getMessage());
 		}
     }
 
@@ -455,6 +504,7 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
         if(StringUtils.trimToNull(getUsername()) != null) {
             injectSecurityConfiguration(config);
         }
+        
         config.put(AdminClient.CONNECTOR_TYPE, getConnectorType());
         client = AdminClientFactory.createAdminClient(config);
         if(client == null) {
@@ -491,30 +541,39 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
     }
 
     private void injectSecurityConfiguration(Properties config) {
+//    	if(verbose) {
+//    		org.apache.soap.util.net.SSLUtils.traceEnabled = true;
+//    	}
+    	SSLSocketFactory.getDefault(); //workaround for IBM SSL error
         config.put(AdminClient.CACHE_DISABLED, "true");
         config.put(AdminClient.CONNECTOR_SECURITY_ENABLED, "true");
         config.put(AdminClient.USERNAME, getUsername());
         config.put(AdminClient.PASSWORD, getPassword());
-
-        if(getTrustStoreLocation() != null) {
-	        config.put("com.ibm.ssl.trustStore", getTrustStoreLocation().getAbsolutePath());
-	        config.put("javax.net.ssl.trustStore", getTrustStoreLocation().getAbsolutePath());
-        }
-
-        if(getKeyStoreLocation() != null) {
-        	config.put("com.ibm.ssl.keyStore", getKeyStoreLocation().getAbsolutePath());
-        	config.put("javax.net.ssl.keyStore", getKeyStoreLocation().getAbsolutePath());
-        }
-
-        if(getTrustStorePassword() != null) {
-        	config.put("com.ibm.ssl.trustStorePassword", getTrustStorePassword());
-        	config.put("javax.net.ssl.trustStorePassword",getTrustStorePassword());
-        }
-
-        if(getKeyStorePassword() != null) {
-        	config.put("com.ibm.ssl.keyStorePassword", getKeyStorePassword());
-        	config.put("javax.net.ssl.keyStorePassword", getKeyStorePassword());
-        }
+        
+    	if(trustAll) {
+    		SSLUtilities.trustAllHostnames();
+    		SSLUtilities.trustAllHttpsCertificates();
+    	} else {
+	        if(getTrustStoreLocation() != null && getTrustStoreLocation().getAbsolutePath().endsWith(".jks")) {
+		        config.put("com.ibm.ssl.trustStore", getTrustStoreLocation().getAbsolutePath());
+		        config.put("javax.net.ssl.trustStore", getTrustStoreLocation().getAbsolutePath());
+	        }
+	
+	        if(getKeyStoreLocation() != null && getKeyStoreLocation().getAbsolutePath().endsWith(".jks")) {
+	        	config.put("com.ibm.ssl.keyStore", getKeyStoreLocation().getAbsolutePath());
+	        	config.put("javax.net.ssl.keyStore", getKeyStoreLocation().getAbsolutePath());
+	        }
+	
+	        if(getTrustStorePassword() != null && !getTrustStorePassword().equals("")) {
+	        	config.put("com.ibm.ssl.trustStorePassword", getTrustStorePassword());
+	        	config.put("javax.net.ssl.trustStorePassword",getTrustStorePassword());
+	        }
+	
+	        if(getKeyStorePassword() != null && !getKeyStorePassword().equals("")) {
+	        	config.put("com.ibm.ssl.keyStorePassword", getKeyStorePassword());
+	        	config.put("javax.net.ssl.keyStorePassword", getKeyStorePassword());
+	        }
+    	}
     }
 
     private String getFormattedTargets(String targets) {
@@ -599,5 +658,9 @@ public class WebSphereDeploymentService extends AbstractDeploymentService {
             throw new DeploymentServiceException(e.getMessage(), e);
         }
     }
+
+	public void setTrustAll(boolean trustAll) {
+		this.trustAll = trustAll;
+	}
 
 }
